# emograph_chat

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/models/: emograph.py
app/prompts/: system.yml
app/utils/: common.py  config.py  generation.py
config/: prompt_template.yml  system_template.yml
