[project]
name = "emograph-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.3",
    "langchain>=0.3.14",
    "streamlit>=1.41.1",
    "langchain-community>=0.3.14",
    "langchain-openai>=0.3.0",
]
